--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "firebase-admin": "^12.7.0",
     "http-status": "^2.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -30,9 +31,11 @@
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^4.1.0",
     "nodemon": "^3.1.9",
     "pdf-parse": "^1.1.1",
     "stripe": "^18.0.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   }
 }
